filtro para dashboard y jornada
